<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TripFormActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginBottom="24dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_city"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/txt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_country"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/txt_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="24dp"
            android:gravity="top"
            android:layout_marginHorizontal="20dp"/>
        <fragment
            android:id="@+id/map_form"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            android:textSize="18sp"
            android:backgroundTint="@android:color/background_dark"
            android:textColor="@android:color/white"
            android:drawablePadding="8dp"
            android:padding="12dp" />

    </LinearLayout>
</FrameLayout>